fix time and blurred bug

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body{
   color: hsl(200, 100%, 10%);
   font-family: sans-serif;
 }
+
+.blurred{
+  filter: blur(3px);
+  overflow: hidden;
+}
 .header{
   display: flex;
   align-items: center;
